# mlb_coffee_book

./: .gitignore  pyproject.toml  run.py
scripts/: build_dataset.py  collect_data.py
src/mlb_coffee_book/: __init__.py
src/mlb_coffee_book/data-collection/: 2023-06-14 - New York Yankees @ New York Mets [717766].en.vtt  main.py  subtitles.srt  testing.ipynb
src/mlb_coffee_book/data_collection/: main.py
src/mlb_coffee_book/data_preperation/: dataset_building.py  transcript_scraping.py
