[project]
name = "mlb-coffee-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jared Zirkes", email = "jaredzrks0@gmail.com" }
]
requires-python = ">=3.10.0"
dependencies = [
    "bs4>=0.0.2",
    "chromedriver-autoinstaller>=0.6.4",
    "html5lib>=1.1",
    "lxml>=5.4.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "selenium>=4.33.0",
    "yt-dlp>=2025.5.22",
]

[project.scripts]
mlb-coffee-book = "mlb_coffee_book:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
